--- a/main.html
+++ b/main.html
@@ -8,6 +8,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+        <label for="name">Name</label>
+		<input type="text" id="name" ><br>
+		<label for="email">Email</label>
+		<input type="email" id="email" ><br>
+
+		<input type="radio" name="gender" value="male" >
+		<label for="gender">Male</label>
+		<input type="radio" name="gender" value="female" >
+		<label for="gender">Female</label><br>
+
+		<select name="cars" id="cars">
+			<option value="cars">BMW</option>
+			<option value="cars">Audi</option>
+			<option value="cars">Mercedez</option>
+		</select><br>
+		
+		<label for="carage">Car Age</label>
+		<input type="text" id="carage"><br>
+
+		<label for="date">Date of Purchase</label>
+		<input type="date" id="dop"><br>
+
+		<label for="password">Password</label>
+		<input type="password" id="password"><br>
+
+		<label for="button">submit</label>
+		<input type="submit" name="submit" id="button">
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
