--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="get">
         <label for="name">Name</label>
-		<input type="text" id="name" ><br>
+		<input type="text" id="name" required><br>
 		<label for="email">Email</label>
-		<input type="email" id="email" ><br>
+		<input type="email" id="email" required><br>
 
 		<input type="radio" name="gender" value="male" >
 		<label for="gender">Male</label>
@@ -26,16 +26,16 @@
 		</select><br>
 		
 		<label for="carage">Car Age</label>
-		<input type="text" id="carage"><br>
+		<input type="text" id="carage" required><br>
 
 		<label for="date">Date of Purchase</label>
-		<input type="date" id="dop"><br>
+		<input type="date" id="dop" required><br>
 
 		<label for="password">Password</label>
-		<input type="password" id="password"><br>
+		<input type="password" id="password" required><br>
 
 		<label for="button">submit</label>
-		<input type="submit" name="submit" id="button">
+		<input type="submit" name="submit" id="button" required>
 </form>
     <script type="text/javascript" src="./script.js">
 </script>
