--- a/main.html
+++ b/main.html
@@ -8,35 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method="get">
+	<form method="post">
         <label for="name">Name</label>
-		<input type="text" id="name" required><br>
+		<input type="text" id="name" required><br><br>
 		<label for="email">Email</label>
-		<input type="email" id="email" required><br>
+		<input type="email" id="email" required><br><br>
+
 
 		<input type="radio" name="gender" value="male" >
-		<label for="gender">Male</label>
+		<label for="male">Male</label>
 		<input type="radio" name="gender" value="female" >
-		<label for="gender">Female</label><br>
+		<label for="female">Female</label><br><br>
 
+		<label for="selecting cars"></label>
 		<select name="cars" id="cars">
 			<option value="cars">BMW</option>
 			<option value="cars">Audi</option>
 			<option value="cars">Mercedez</option>
-		</select><br>
-		
+		</select><br><br>
+
 		<label for="carage">Car Age</label>
-		<input type="text" id="carage" required><br>
+		<input type="text" id="carage" required><br><br>
 
 		<label for="date">Date of Purchase</label>
-		<input type="date" id="dop" required><br>
+		<input type="date" id="dop" required><br><br>
 
 		<label for="password">Password</label>
-		<input type="password" id="password" required><br>
+		<input type="password" id="password" required><br><br>
 
-		<label for="button">submit</label>
-		<input type="submit" name="submit" id="button" required>
+		<label for="submit"></label>
+		<button type="submit">Submit</button>
 </form>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
