--- a/main.html
+++ b/main.html
@@ -15,12 +15,12 @@
 		<input type="email" id="email" required><br><br>
 
 
-		<input type="radio" name="gender" value="male" >
+		<input type="radio" name="gender" value="male" required>
 		<label for="male">Male</label>
-		<input type="radio" name="gender" value="female" >
+		<input type="radio" name="gender" value="female" required>
 		<label for="female">Female</label><br><br>
 
-		<label for="selecting cars"></label>
+		<label for="cars">Select Cars</label>
 		<select name="cars" id="cars">
 			<option value="cars">BMW</option>
 			<option value="cars">Audi</option>
@@ -30,7 +30,7 @@
 		<label for="carage">Car Age</label>
 		<input type="text" id="carage" required><br><br>
 
-		<label for="date">Date of Purchase</label>
+		<label for="dop">Date of Purchase</label>
 		<input type="date" id="dop" required><br><br>
 
 		<label for="password">Password</label>
